replacinf NaN with 0 on new columns

--- a/netflix_titles.csv/notebook.ipynb
+++ b/netflix_titles.csv/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "max     2021.000000"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
        "[8804 rows x 12 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,14 +1205,14 @@
     "netflix_df['duration_mins']= netflix_df[netflix_df['type']=='Movie']['duration'].str.extract('(\\d+)').astype(float)\n",
     "netflix_df['duration_seasons']= netflix_df[netflix_df['type']=='TV Show']['duration'].str.extract('(\\d+)').astype(float)\n",
     "#NaN values fill with 0 in new columns\n",
-    "netflix_df[['duration_mins','duration_seasons']]==netflix_df[['duration_mins', 'duration_seasons']].fillna(0)\n",
+    "netflix_df[['duration_mins','duration_seasons']]=netflix_df[['duration_mins', 'duration_seasons']].fillna(0)\n",
     "# drop the duration column \n",
     "netflix_df=netflix_df.drop('duration', axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
        "      <td>Documentaries</td>\n",
        "      <td>As her father nears the end of his life, filmm...</td>\n",
        "      <td>90.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1281,7 +1281,7 @@
        "      <td>TV-MA</td>\n",
        "      <td>International TV Shows, TV Dramas, TV Mysteries</td>\n",
        "      <td>After crossing paths at a party, a Cape Town t...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1297,7 +1297,7 @@
        "      <td>TV-MA</td>\n",
        "      <td>Crime TV Shows, International TV Shows, TV Act...</td>\n",
        "      <td>To protect his family from a powerful drug lor...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1313,7 +1313,7 @@
        "      <td>TV-MA</td>\n",
        "      <td>Docuseries, Reality TV</td>\n",
        "      <td>Feuds, flirtations and toilet talk go down amo...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1329,7 +1329,7 @@
        "      <td>TV-MA</td>\n",
        "      <td>International TV Shows, Romantic TV Shows, TV ...</td>\n",
        "      <td>In a city of coaching centers known to train I...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1367,20 +1367,20 @@
        "\n",
        "                                         description  duration_mins  \\\n",
        "0  As her father nears the end of his life, filmm...           90.0   \n",
-       "1  After crossing paths at a party, a Cape Town t...            NaN   \n",
-       "2  To protect his family from a powerful drug lor...            NaN   \n",
-       "3  Feuds, flirtations and toilet talk go down amo...            NaN   \n",
-       "4  In a city of coaching centers known to train I...            NaN   \n",
+       "1  After crossing paths at a party, a Cape Town t...            0.0   \n",
+       "2  To protect his family from a powerful drug lor...            0.0   \n",
+       "3  Feuds, flirtations and toilet talk go down amo...            0.0   \n",
+       "4  In a city of coaching centers known to train I...            0.0   \n",
        "\n",
        "   duration_seasons  \n",
-       "0               NaN  \n",
+       "0               0.0  \n",
        "1               2.0  \n",
        "2               1.0  \n",
        "3               1.0  \n",
        "4               2.0  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
