--- a/netflix_titles.csv/notebook.ipynb
+++ b/netflix_titles.csv/notebook.ipynb
@@ -72,43 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             director                                               cast  \\\n",
-      "0     Kirsten Johnson                                            Unknown   \n",
-      "1             Unknown  Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...   \n",
-      "2     Julien Leclercq  Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...   \n",
-      "3             Unknown                                            Unknown   \n",
-      "4             Unknown  Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...   \n",
-      "...               ...                                                ...   \n",
-      "8802    David Fincher  Mark Ruffalo, Jake Gyllenhaal, Robert Downey J...   \n",
-      "8803          Unknown                                            Unknown   \n",
-      "8804  Ruben Fleischer  Jesse Eisenberg, Woody Harrelson, Emma Stone, ...   \n",
-      "8805     Peter Hewitt  Tim Allen, Courteney Cox, Chevy Chase, Kate Ma...   \n",
-      "8806      Mozez Singh  Vicky Kaushal, Sarah-Jane Dias, Raaghav Chanan...   \n",
-      "\n",
-      "            country  \n",
-      "0     United States  \n",
-      "1      South Africa  \n",
-      "2           Unknown  \n",
-      "3           Unknown  \n",
-      "4             India  \n",
-      "...             ...  \n",
-      "8802  United States  \n",
-      "8803        Unknown  \n",
-      "8804  United States  \n",
-      "8805  United States  \n",
-      "8806          India  \n",
-      "\n",
-      "[8804 rows x 3 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cols = ['director', 'cast', 'country']\n",
     "\n",
@@ -121,7 +87,7 @@
     "    if netflix_df.loc[i, 'rating']== 'UR':\n",
     "        netflix_df.loc[i,'rating']= 'NR'\n",
     "#drop row with missing values\n",
-    "#netflix_df=netflix_df.dropna(subset=['duration'])\n",
+    "netflix_df=netflix_df.dropna(subset=['duration'])\n",
     "\n"
    ]
   },
@@ -187,31 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'duration'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\MashotoG\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3801\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mc:\\Users\\MashotoG\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\MashotoG\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'duration'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# transfer to datetime type\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m netflix_df[\u001b[39m'\u001b[39m\u001b[39mduration_mins\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39mnetflix_df[netflix_df[\u001b[39m'\u001b[39;49m\u001b[39mtype\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m==\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mMovie\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mduration\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mextract(\u001b[39m'\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md+)\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mfloat\u001b[39m)\n\u001b[0;32m      3\u001b[0m netflix_df[\u001b[39m'\u001b[39m\u001b[39mduration_seasons\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39mnetflix_df[netflix_df[\u001b[39m'\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m==\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTV Show\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mextract(\u001b[39m'\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md+)\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mfloat\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39m#NaN values replace with 0\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\MashotoG\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3805\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3806\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3807\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3808\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3809\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\Users\\MashotoG\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3804\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3805\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3806\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3807\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3808\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3809\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'duration'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# transfer to datetime type\n",
     "netflix_df['duration_mins']=netflix_df[netflix_df['type']=='Movie']['duration'].str.extract('(\\d+)').astype(float)\n",
@@ -224,179 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>show_id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>title</th>\n",
-       "      <th>director</th>\n",
-       "      <th>cast</th>\n",
-       "      <th>country</th>\n",
-       "      <th>date_added</th>\n",
-       "      <th>release_year</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>listed_in</th>\n",
-       "      <th>description</th>\n",
-       "      <th>duration_mins</th>\n",
-       "      <th>duration_seasons</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>s1</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>Dick Johnson Is Dead</td>\n",
-       "      <td>Kirsten Johnson</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>September 25, 2021</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>PG-13</td>\n",
-       "      <td>Documentaries</td>\n",
-       "      <td>As her father nears the end of his life, filmm...</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>s2</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Blood &amp; Water</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...</td>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>International TV Shows, TV Dramas, TV Mysteries</td>\n",
-       "      <td>After crossing paths at a party, a Cape Town t...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>s3</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Ganglands</td>\n",
-       "      <td>Julien Leclercq</td>\n",
-       "      <td>Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>Crime TV Shows, International TV Shows, TV Act...</td>\n",
-       "      <td>To protect his family from a powerful drug lor...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>s4</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Jailbirds New Orleans</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>Docuseries, Reality TV</td>\n",
-       "      <td>Feuds, flirtations and toilet talk go down amo...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>s5</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Kota Factory</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...</td>\n",
-       "      <td>India</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>International TV Shows, Romantic TV Shows, TV ...</td>\n",
-       "      <td>In a city of coaching centers known to train I...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  show_id     type                  title         director  \\\n",
-       "0      s1    Movie   Dick Johnson Is Dead  Kirsten Johnson   \n",
-       "1      s2  TV Show          Blood & Water          Unknown   \n",
-       "2      s3  TV Show              Ganglands  Julien Leclercq   \n",
-       "3      s4  TV Show  Jailbirds New Orleans          Unknown   \n",
-       "4      s5  TV Show           Kota Factory          Unknown   \n",
-       "\n",
-       "                                                cast        country  \\\n",
-       "0                                            Unknown  United States   \n",
-       "1  Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...   South Africa   \n",
-       "2  Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...        Unknown   \n",
-       "3                                            Unknown        Unknown   \n",
-       "4  Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...          India   \n",
-       "\n",
-       "           date_added  release_year rating  \\\n",
-       "0  September 25, 2021          2020  PG-13   \n",
-       "1  September 24, 2021          2021  TV-MA   \n",
-       "2  September 24, 2021          2021  TV-MA   \n",
-       "3  September 24, 2021          2021  TV-MA   \n",
-       "4  September 24, 2021          2021  TV-MA   \n",
-       "\n",
-       "                                           listed_in  \\\n",
-       "0                                      Documentaries   \n",
-       "1    International TV Shows, TV Dramas, TV Mysteries   \n",
-       "2  Crime TV Shows, International TV Shows, TV Act...   \n",
-       "3                             Docuseries, Reality TV   \n",
-       "4  International TV Shows, Romantic TV Shows, TV ...   \n",
-       "\n",
-       "                                         description  duration_mins  \\\n",
-       "0  As her father nears the end of his life, filmm...           90.0   \n",
-       "1  After crossing paths at a party, a Cape Town t...            0.0   \n",
-       "2  To protect his family from a powerful drug lor...            0.0   \n",
-       "3  Feuds, flirtations and toilet talk go down amo...            0.0   \n",
-       "4  In a city of coaching centers known to train I...            0.0   \n",
-       "\n",
-       "   duration_seasons  \n",
-       "0               0.0  \n",
-       "1               2.0  \n",
-       "2               1.0  \n",
-       "3               1.0  \n",
-       "4               2.0  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "netflix_df.head()"
    ]
